--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ About
 <body>
 <h1> About: Our Bank</h1>
 <div class="topnav">
-  <a class="active" href="home.html">Home</a>
+  <a class="active" href="index.html">Home</a>
   <a href="service.html">Services</a>
   <a href="netbanking.html">NetBanking</a>
   <a href="contact.html">Contact Us</a>
