--- a/service.html
+++ b/service.html
@@ -7,7 +7,7 @@ Welcome to Our Bank
 <body>
 <h1> Welcome to Our Bank </h1>
 <div class="topnav">
-  <a class="active" href="home.html">Home</a>
+  <a class="active" href="index.html">Home</a>
   <a href="about.html">About Us</a>
   <a href="netbanking.html">NetBanking</a>
   <a href="contact.html">Contact Us</a>
