--- a/netbanking.html
+++ b/netbanking.html
@@ -7,7 +7,7 @@
 <body>
 <h1> Net Banking </h1>
 <div class="topnav">
-  <a class="active" href="home.html">Home</a>
+  <a class="active" href="index.html">Home</a>
   <a href="about.html">About Us</a>
   <a href="service.html">Services</a>
   <a href="contact.html">Contact Us</a>
@@ -25,7 +25,7 @@
  </p>
  
   <hr>
-  <form action="home.html"> 
+  <form action="index.html"> 
   <h3> 
   Customer ID: <input type="text" name="un"> <br> <br>
   Password: <input type="password" name="pwd"> <br>
